--- a/index.html
+++ b/index.html
@@ -18,12 +18,12 @@
         </div>
         <div class="justify-content-sm-center">
           <nav class="navbar">
-            <input type="button" onClick="document.getElementById('intro').scrollIntoView();">About</input>
+            <!-- <input type="button" onClick="document.getElementById('intro').scrollIntoView();">About</input>
             <input type="button" onClick="document.getElementById('portfolio').scrollIntoView();">Portfolio</input>
-            <input type="button" onClick="document.getElementById('contact').scrollIntoView();">Contact</input>
-            <!-- <a href="index.html">About</a>
-            <a href="portfolio.html">Portfolio</a>
-            <a href="contact.html">Contact</a> -->
+            <input type="button" onClick="document.getElementById('contact').scrollIntoView();">Contact</input> -->
+            <a href="#intro">About</a>
+            <a href="#portfolio">Portfolio</a>
+            <a href="#contact">Contact</a>
           </nav>
         </div>
       </div>
@@ -34,20 +34,32 @@
     <div id="main-container" class="container">
       <section class="main-section">
         <h1>About Me</h1>
+        <div id=>
+          <img src="assets/images/cat.jpg" class="auth-image" alt="Your Name">
 
-        <img src="assets/images/cat.jpg" class="auth-image" alt="Your Name">
-
-        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aliquam vestibulum luctus felis, ac rhoncus nunc
-          porttitor condimentum. Mauris sit amet dolor eu elit varius varius facilisis id arcu. Proin vel dui massa.
-          Nunc rhoncus fringilla pharetra. Vestibulum bibendum consectetur euismod. Proin commodo purus vitae
-          sollicitudin consectetur.</p>
-
-        <p>Donec vehicula lacus at leo feugiat lacinia. In et ex ultrices, ultrices neque non, pretium odio. Nunc id
-          eros iaculis, pulvinar quam eget, egestas mauris.</p>
-
-        <p>Suspendisse dictum, arcu at convallis faucibus, quam sapien tincidunt nunc, sit amet egestas nibh tortor et
-          mi. Orci varius natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus.</p>
-
+          <p> I was born in Lawrence, Ma and raised in Windham, NH. Special childhood interests were sports,
+            particularly soccer, and nature. We traveled as a family, twice to the West Coast, and once to Europe. After
+            graduating middle school, I was enrolled at Bishop Guertin High School in Nashua, NH, where I made four year
+            honor-role, and captained the tennis team my senior year. I graduated after being admitted to, and deciding
+            to
+            attend, Boston College, in Chestnut Hill, Ma.</p>
+          <p>I developed, in high school, an interest in music. It was then I attended the first concerts of my choice.
+            I
+            saw the Rolling Stones, Eric Clapton, U2, The Eagles. I was also a huge fan of Led Zeppelin and The Clash.
+            At Boston College, after considering economics as a path of study, I decided, finally, to study English. I
+            tried out early, but only made the club soccer team as a Junior. Second semester of my junior year, after a
+            year of living off-campus as is the norm for juniors at that school, I embarked on a trip to study abroad,
+            in a program run by a department at SUNY Plattsburg, at the Universidad de Playa Ancha, in Valparaiso,
+            Chile.</p>
+          <p>After graduating with a 3.27 GPA and a major in English, I returned to my parents' house for a year,
+            and applied, that fall to masters in architecture programs at Columbia's GSAPP and The Art Institute of
+            Chicago's newly formed AIADO. I studied at the Art Institute for a year and a half, and found it wasn't the
+            right fit for
+            me. Later, I remained in Chicago, IL, living in the Logan Square neighborhood, and immersed myself in
+            freelance work and bicycle mechanics. I developed a hobby of collecting rocks, and searching for meteorites
+            there, which I thought glaciation had brought together at that locale, historically.
+          </p>
+        </div>
       </section>
 
     </div>
@@ -62,11 +74,13 @@
             <img class="img-fluid" src="assets/images/technics-q-c-640-480-1.jpg" alt="Word Guess">
 
             <h3 class="externallink"><a href="https://pedrichards.github.io/Word-Guess-Game/">Word Guess</a></h3>
+            <h4 class="externallink"><a href="https://github.com/pedrichards/Word-Guess-Game/">code</h4>
           </div>
           <div class=col-sm-6>
             <img class="img-fluid" src="assets/images/technics-q-c-640-480-2.jpg" alt="RPG Game">
 
             <h3 class="externallink"><a href="https://pedrichards.github.io/unit-4-game/">Crystal Finder Game</h3>
+            <h4 class="externallink"><a href="https://github.com/pedrichards/unit-4-game/">code</h4>
           </div>
         </div>
         <div class="row">
@@ -74,11 +88,13 @@
             <img class="img-fluid" src="assets/images/technics-q-c-640-480-5.jpg" alt="Trivia Game">
 
             <h3 class="externallink"><a href="https://pedrichards.github.io/TriviaGame/">Trivia Game</h3>
+            <h4 class="externallink"><a href="https://github.com/pedrichards/TriviaGame/">code</h4>
           </div>
           <div class=col-sm-6>
             <img class="img-fluid" src="assets/images/technics-q-c-640-480-7.jpg" alt="Rutgers Info Widget">
 
             <h3 class="externallink"><a href="https://pedrichards.github.io/GiphyApp/">Giphy App</h3>
+            <h4 class="externallink"><a href="https://github.com/pedrichards/GiphyApp/">code</h4>
           </div>
         </div>
         <div class="row">
@@ -86,11 +102,13 @@
             <img class="img-fluid" src="assets/images/technics-q-c-640-480-9.jpg" alt="Train Scheduler">
 
             <h3 class="externallink"><a href="https://pedrichards.github.io/TrainActivity/">Train Scheduler</h3>
+            <h4 class="externallink"><a href="https://github.com/pedrichards/TrainActivity/">code</h4>
           </div>
           <div class=col-sm-6>
             <img class="img-fluid" src="assets/images/recipesoftheworld.jpg" alt="Recipes of The World">
 
             <h3 class="externallink"><a href="https://edestiny7.github.io/SickGroup//">Recipes of the World</h3>
+            <h4 class="externallink"><a href="https://github.com/Edestiny7/SickGroup/">code</h4>
           </div>
         </div>
         <div></div>
@@ -106,7 +124,11 @@
       <section class="main-section">
         <h1>Contact</h1>
 
-        <form id="contact-form">
+        <h3 class="externallink"><a href="https://linkedin.com/in/pedrichards/">LinkedIn</h3>
+        <br>
+        <h3 class="externallink"><a href="https://github.com/pedrichards/">Github</h3>
+
+        <!-- <form id="contact-form">
           <ul>
             <li>
               <label for="name">Name</label>
@@ -122,7 +144,7 @@
             </li>
           </ul>
           <input type="submit">
-        </form>
+        </form> -->
 
       </section>
 
@@ -132,7 +154,7 @@
   </div class="row">
   <footer>
     <div class="container">
-      Copyright &copy;
+      Copyright Peter Richards &copy;
     </div>
   </footer>
   </div>
