done coding changes

--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
       <section class="main-section">
         <h1>About Me</h1>
         <div id=>
-          <img src="assets/images/cat.jpg" class="auth-image" alt="Your Name">
+          <img src="assets/images/andi.jpg" class="auth-image" alt="Your Name">
 
           <p> I was born in Lawrence, Ma and raised in Windham, NH. Special childhood interests were sports,
             particularly soccer, and nature. We traveled as a family, twice to the West Coast, and once to Europe. After
