--- a/index.html
+++ b/index.html
@@ -105,7 +105,7 @@
             <h4 class="externallink"><a href="https://github.com/pedrichards/TrainActivity/">code</h4>
           </div>
           <div class=col-sm-6>
-            <img class="img-fluid" src="assets/images/recipesoftheworld.jpg" alt="Recipes of The World">
+            <img class="img-fluid" src="assets/images/recipesoftheworld.JPG" alt="Recipes of The World">
 
             <h3 class="externallink"><a href="https://edestiny7.github.io/SickGroup//">Recipes of the World</h3>
             <h4 class="externallink"><a href="https://github.com/Edestiny7/SickGroup/">code</h4>
