added link for Bamazon

--- a/index.html
+++ b/index.html
@@ -111,7 +111,17 @@
             <h4 class="externallink"><a href="https://github.com/Edestiny7/SickGroup/">code</h4>
           </div>
         </div>
-        <div></div>
+        <div class="row">
+          <div class=col-sm-6>
+            <img class="img-fluid" src="assets/images/technics-q-c-640-480-9.jpg" alt="Bamazon">
+
+            <h4 class="externallink"><a href="https://github.com/pedrichards/bamazon">Bamazon code</h4>
+          </div>
+          <div class=col-sm-6>
+
+          </div>
+        </div>
+
 
       </section>
 
