added lirinode link

--- a/index.html
+++ b/index.html
@@ -115,17 +115,22 @@
           <div class=col-sm-6>
             <img class="img-fluid" src="assets/images/technics-q-c-640-480-9.jpg" alt="Bamazon">
 
-            <h4 class="externallink"><a href="https://github.com/pedrichards/bamazon">Bamazon code</h4>
+            <h4 class="externallink"><a href="https://github.com/pedrichards/liri-node-app">LIRI Node app code</h4>
           </div>
           <div class=col-sm-6>
+            <img class="img-fluid" src="assets/images/technics-q-c-640-480-9.jpg" alt="Bamazon">
 
+            <h4 class="externallink"><a href="https://github.com/pedrichards/bamazon">Bamazon code</h4>
           </div>
+
+
         </div>
-
-
-      </section>
-
     </div>
+
+
+    </section>
+
+  </div>
   </div>
 
 
