added four links to two projects

--- a/index.html
+++ b/index.html
@@ -125,6 +125,20 @@
 
 
         </div>
+        <div class="row">
+          <div class=col-sm-6>
+            <img class="img-fluid" src="assets/images/technics-q-c-640-480-9.jpg" alt="FriendFinder">
+            <h3 class="externallink"><a href="https://nameless-gorge-99999.herokuapp.com/">Friend Finder</h3>
+            <h4 class="externallink"><a href="https://github.com/pedrichards/FriendFinder">Friend Finder code</h4>
+          </div>
+          <div class=col-sm-6>
+            <img class="img-fluid" src="assets/images/technics-q-c-640-480-9.jpg" alt="Eat-Da-Burger">
+            <h3 class="externallink"><a href="https://github.com/pedrichards/burger">Eat-Da-Burger</h3>
+            <h4 class="externallink"><a href="https://github.com/pedrichards/bamazon">Eat-Da-Burger code</h4>
+          </div>
+
+
+        </div>
     </div>
 
 
